welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: not found: value prendbiscuit
prendbiscuit()
^Balin:18: error: not found: value prendbiscuit
	prendbiscuit()
        ^