welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()	
while (!estSurBiscuit) {
    avance();
}
prendbiscuit()
while (!estSurBiscuit) {
    recule();
}
avance()
poseBiscuit()//1er biscuit posé
while (estSurBiscuit) {
	avance();
	while (!estSurBiscuit) {
   	 avance();
	}
	prendbiscuit()
	while (!estSurBiscuit) {
    	recule();
	}
	avance()
	poseBiscuit()
}
